# StarFinding

./: .gitattributes  .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  oh-package.json5
AppScope/: app.json5
cloud/: .dockerignore  .env.example  Dockerfile  README.md  requirements-dev.txt  requirements.txt
cloud/app/: __init__.py  config.py  image_processing.py  main.py  providers.py  repository.py  schemas.py  service.py
cloud/tests/: conftest.py  test_api.py  test_processing.py
docs/: implementation-status.md  real-device-acceptance.md
docs/infra/: cloud-deployment.md  topology.md
entry/: oh-package.json5
entry/src/main/: module.json5
entry/src/test/: CaptureWorkflowCoordinator.test.ets  DeviceConnectionSettingsStore.test.ets  DevicePairingService.test.ets  DeviceReadinessService.test.ets  DigitalTwinReplayService.test.ets  EphemerisService.test.ets  GestureInteraction.test.ets  HandModelRuntime.test.ets  HarmonyFeatureCapabilityService.test.ets  List.test.ets  (+22 more)
firmware/onstepx-maxesp4/: README.md  StarFinding.Config.patch
gateway/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
gateway/app/: __init__.py  camera.py  commands.py  config.py  database.py  image_processing.py  main.py  models.py  plate_solver.py  task_manager.py  timelapse.py
gateway/scripts/: install.sh
gateway/systemd/: starfinding-gateway.service
gateway/tests/: conftest.py  test_api.py  test_camera_preflight.py  test_database.py  test_processing.py
tools/: build_sky_survey_backdrop.py  import_d3_celestial.mjs  import_hyg_visible_stars.ps1
(+97 files in other folders)
