[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "starfinding-gateway"
version = "0.1.0"
description = "StarFinding Raspberry Pi camera and astrophotography gateway"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "pydantic>=2.6,<3",
    "numpy>=1.26,<3",
    "Pillow>=10.2,<12",
    "python-multipart>=0.0.18,<1",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27,<1",
    "pytest>=8,<9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
